--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,14 +3,74 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F1F1F1"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".presentation.HomeActivity">
+    tools:context="ch.hackathon.asdf.seniorapp.HomeActivity">
+
+
+    <ImageButton
+        android:layout_width="350dp"
+        android:layout_height="350dp"
+        android:id="@+id/eventButton"
+        android:layout_alignTop="@+id/transportButton"
+        android:layout_alignParentStart="true"
+        android:background="#00A1F1"
+        android:src="@drawable/calendar_icon"
+        android:scaleType="fitCenter"
+        android:padding="30dp"
+        />
+
+    <ImageButton
+        android:layout_width="350dp"
+        android:layout_height="350dp"
+        android:id="@+id/transportButton"
+        android:layout_below="@+id/textView4"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="42dp"
+        android:src="@drawable/car_icon"
+        android:scaleType="centerInside"
+        android:padding="30dp"
+        android:background="#FFBB00"
+        />
+
+    <ImageButton
+    android:layout_width="350dp"
+    android:layout_height="350dp"
+    android:id="@+id/contactButton"
+    android:layout_alignParentBottom="true"
+    android:layout_alignParentStart="true"
+    android:layout_marginBottom="203dp"
+    android:background="#F65314"
+    android:src="@drawable/person_icon"
+    android:scaleType="centerInside"
+    />
+
+    <ImageButton
+        android:layout_width="350dp"
+        android:layout_height="350dp"
+        android:id="@+id/unknowButton"
+        android:layout_alignTop="@+id/contactButton"
+        android:layout_alignStart="@+id/transportButton"
+        android:background="#7CBB00"
+        android:src="@drawable/news_icon"
+        android:scaleType="centerInside"
+        android:padding="30dp"
+        />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Accueil"
+        android:id="@+id/textView4"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="54dp"
+        android:textSize="60dp"
+        />
 </RelativeLayout>
+
+
