--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -1,73 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:id="@+id/ap">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context="ch.hackathon.asdf.seniorapp.presentation.EventsActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Nom de l&apos;événement"
-        android:id="@+id/eventNameView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="40dp"
-        android:textSize="40dp"
-        android:textIsSelectable="false" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="25 Janvier 2016"
-        android:id="@+id/eventDateView"
-        android:textSize="30dp"
-        android:layout_below="@+id/eventNameView"
-        android:layout_alignStart="@+id/eventNameView" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Petit café / repas au tea-room du coin"
-        android:id="@+id/textView2"
-        android:layout_marginTop="30dp"
-        android:layout_below="@+id/eventDateView"
-        android:layout_alignStart="@+id/eventDateView" />
-
-
-    <com.google.android.maps.MapView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:apiKey="votre clé"
-        android:layout_alignStart="@+id/textView2"
-        android:layout_alignEnd="@+id/eventNameView"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@+id/placeLabel"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="40dp"
-        android:id="@+id/view" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Emplacement :"
-        android:id="@+id/placeLabel"
-        android:layout_centerVertical="true"
-        android:layout_alignStart="@+id/textView2" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Demander transport"
-        android:id="@+id/requestTransportButton"
-        android:onClick="requestTransport"
-        android:layout_centerVertical="true"
-        android:layout_alignEnd="@id/placeLabel" />
-
-
-</RelativeLayout>
+    </RelativeLayout>
