--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -51,6 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ajouter"
-        android:id="@+id/button" />
+        android:id="@+id/button"
+        android:onClick="addEvent"/>
 
 </LinearLayout>
