--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -13,8 +13,8 @@
         android:layout_height="wrap_content"
         android:text="Ajouter événement"
         android:id="@+id/add"
-        android:alignParentTop="true"
-        android:layout_marginBottom="16px"/>
+        android:layout_marginBottom="16px"
+        android:onClick="addActivity"/>
 
 
     <ListView
