--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,6 +21,7 @@
         android:src="@drawable/calendar_icon"
         android:scaleType="fitCenter"
         android:padding="30dp"
+        android:onClick="startEvent"
         />
 
     <ImageButton
