--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -29,7 +29,7 @@
         android:ems="10"
         android:paddingBottom="16dp"/>
 
-    <EditText
+    <DatePicker
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="date"
