L'édition des contacts favoris est fonctionelle

--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -82,6 +82,7 @@
         android:layout_height="150dp"
         android:text="Editer les favoris"
         android:id="@+id/favEdit"
+        android:onClick="editFavorite"
         android:layout_marginTop="150dp"
         android:textSize="40dp"
         android:layout_below="@+id/linearLayout2"
