--- a/app/src/main/res/layout/activity_contact_edit.xml
+++ b/app/src/main/res/layout/activity_contact_edit.xml
@@ -56,5 +56,14 @@
         android:layout_below="@+id/tvRank3"
         android:layout_alignParentStart="true" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/editTop3button"
+        android:onClick="editTop3"
+        android:layout_below="@+id/spinnerRank3"
+        android:layout_alignParentStart="true" />
+
 
 </RelativeLayout>
