--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -12,13 +12,14 @@
         android:layout_column="0"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="80dp"
         android:id="@+id/linearLayout">
 
         <QuickContactBadge
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:id="@+id/quickContactBadge"
+            android:src="@drawable/person_icon"
             android:layout_weight="1"
             android:layout_marginTop="25dp" />
 
@@ -26,6 +27,7 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:id="@+id/quickContactBadge3"
+            android:src="@drawable/person_icon"
             android:layout_weight="1"
             android:layout_marginTop="25dp" />
 
@@ -33,6 +35,7 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:id="@+id/quickContactBadge2"
+            android:src="@drawable/person_icon"
             android:layout_gravity="top|center_horizontal"
             android:layout_marginTop="25dp"
             android:layout_weight="1" />
@@ -83,7 +86,7 @@
         android:text="Editer les favoris"
         android:id="@+id/favEdit"
         android:onClick="editFavorite"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="244dp"
         android:textSize="40dp"
         android:layout_below="@+id/linearLayout2"
         android:layout_centerHorizontal="true" />
@@ -94,9 +97,22 @@
         android:text="Tous les contacts"
         android:id="@+id/allContacts"
         android:onClick="displayContacts"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="47dp"
+        android:textSize="40dp"
+        android:background="#AADDFF"
         android:layout_below="@+id/favEdit"
-        android:layout_centerHorizontal="true"
-        android:textSize="40dp" />
+        android:layout_alignStart="@+id/favEdit" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Mes Favoris"
+        android:id="@+id/favTitle"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/favEdit"
+        android:textIsSelectable="true"
+        android:textSize="50dp"
+        android:layout_marginTop="25dp" />
 
 </RelativeLayout>
