--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -56,5 +56,14 @@
         android:layout_centerVertical="true"
         android:layout_toEndOf="@+id/editEventButton" />
 
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        android:name="com.google.android.gms.maps.MapFragment"
+        android:id="@+id/map"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editEventButton"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true" />
+
 
 </RelativeLayout>
