--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -8,9 +8,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Ajouter nouvel événement:"
+        android:text="Ajouter nouvel événement :"
         android:paddingBottom="16dp"
-        android:id="@+id/addEventTitle" />
+        android:id="@+id/addEventTitle"
+        android:textSize="50dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="50dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp" />
 
     <EditText
         android:layout_width="match_parent"
@@ -18,7 +23,9 @@
         android:id="@+id/editTitle"
         android:hint="Nom"
         android:paddingBottom="16dp"
-        />
+        android:textSize="30dp"
+        android:textIsSelectable="true"
+        android:layout_margin="25dp" />
 
     <EditText
         android:layout_width="match_parent"
@@ -27,7 +34,9 @@
         android:hint="Description"
         android:inputType="textMultiLine"
         android:ems="10"
-        android:paddingBottom="16dp"/>
+        android:paddingBottom="16dp"
+        android:textSize="30dp"
+        android:layout_margin="25dp" />
 
     <EditText
         android:layout_width="match_parent"
@@ -37,7 +46,8 @@
         android:id="@+id/editDate"
         android:hint="Date"
         android:paddingBottom="16dp"
-        />
+        android:textSize="30dp"
+        android:layout_margin="25dp" />
 
     <EditText
         android:layout_width="match_parent"
@@ -45,13 +55,18 @@
         android:id="@+id/editLocation"
         android:hint="Lieu"
         android:paddingBottom="16dp"
-        />
+        android:textSize="30dp"
+        android:layout_margin="25dp" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="125dp"
         android:text="Ajouter"
         android:id="@+id/button"
-        android:onClick="addEvent"/>
+        android:onClick="addEvent"
+        android:layout_marginRight="25dp"
+        android:layout_marginLeft="25dp"
+        android:textSize="45dp"
+        android:layout_marginTop="350dp" />
 
 </LinearLayout>
