--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -9,18 +9,20 @@
         android:paddingTop="@dimen/activity_vertical_margin">
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="125dp"
         android:text="Ajouter événement"
         android:id="@+id/add"
         android:layout_marginBottom="16px"
-        android:onClick="addActivity"/>
+        android:onClick="addActivity"
+        android:textSize="45dp" />
 
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@android:id/list"
+        android:textSize="30dp"
         android:layout_below="@+id/add"></ListView>
 
 
